fix safari mobile bug with scrolling on conversations list by making the body overflow hidden only on that page

--- a/app/assets/stylesheets/Inbox.scss
+++ b/app/assets/stylesheets/Inbox.scss
@@ -19,7 +19,6 @@
 @media screen and (max-width: 992px) {
   .Inbox {
     .searchbox {
-      position: fixed !important;
       max-width: none !important;
       left: 0 !important;
       right: 0 !important;
