--- a/app/assets/stylesheets/Navigation.scss
+++ b/app/assets/stylesheets/Navigation.scss
@@ -12,9 +12,3 @@
     right: 0;
   }
 }
-
-@media screen and (max-width: 992px) {
-  .Navigation {
-    position: absolute;
-  }
-}
